=============
Release Notes
=============

MongoDB Connector for Spark 10.0.0
----------------------------------

- Support for Spark Structured Streaming.